--- a/render.yaml
+++ b/render.yaml
@@ -5,4 +5,6 @@ services:
     plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: python bot.py
+    runtime: python
     pythonVersion: 3.11
+    
